--- a/app/src/app/main/business-info/business-info.component.html
+++ b/app/src/app/main/business-info/business-info.component.html
@@ -1,5 +1,5 @@
 <div fxLayout fxLayoutAlign="center center" fxLayoutGap="32px" style="height: 100%">
-  <form [formGroup]="infoForm" fxLayout="column" fxLayoutAlign="center center">
+  <form [formGroup]="infoForm" fxLayout="column" fxLayoutGap="8px" fxLayoutAlign="center center">
     <h1>Enter your company details</h1>
     <mat-form-field appearance="outline">
       <input matInput placeholder="Enter Business Name" formControlName="business_name">
@@ -8,7 +8,7 @@
       <input matInput placeholder="Enter Business Address" formControlName="business_address">
     </mat-form-field>
     <input type="file" placeholder="Upload GST File" (change)="onGSTUpload($event.target.files[0])">
-    {{ infoForm.get('gst_number').value }}
+    <p>Your GST Number is: {{ infoForm.get('gst_number').value }}</p>
     <input type="file" placeholder="Upload Sales History File">
     <button mat-raised-button color="primary" (click)="updateBusinessInfo()">Continue</button>
   </form>
