--- a/app/src/app/main/business-info/business-info.component.html
+++ b/app/src/app/main/business-info/business-info.component.html
@@ -1,4 +1,4 @@
-<div fxLayout fxLayoutAlign="center center" fxLayoutGap="32px" style="height: 100%">
+<div fxLayout fxLayoutAlign="center center" class="background" fxLayoutGap="32px" style="height: 100%">
   <form [formGroup]="infoForm" fxLayout="column" fxLayoutGap="8px" fxLayoutAlign="center center">
     <h1>Enter your company details</h1>
     <mat-form-field appearance="outline">
