--- a/app/src/app/user/login/login.component.html
+++ b/app/src/app/user/login/login.component.html
@@ -1,4 +1,4 @@
-<div fxLayout fxLayoutAlign="center center" fxLayoutGap="32px" style="height: 100%">
+<div fxLayout fxLayoutAlign="center center" class="background" fxLayoutGap="32px" style="height: 100%">
   <form [formGroup]="loginForm" fxLayout="column" fxLayoutAlign="center center">
     <h1>Login</h1>
     <mat-form-field appearance="outline">
